do i18n for takusagewin (fi/en)

--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -628,5 +628,90 @@
   "TakUsageIos1.unfoldableCard3.note": "Muista, että merkki ei ole koskaan riittävä ilmoitus. Lähetä lisäksi aina sanoma käsketyllä menetelmällä havainnostasi.",
   "TakUsageIos1.unfoldableCard4.title": "4. Vastaanota merkkejä Recon Feedistä",
   "TakUsageIos1.unfoldableCard4.step1": "Jos olet käyttöönotto-ohjeen sivun 5 mukaisesti ottanut käyttöön Data Syncillä <strong>Recon Feedin</strong>, päivittyy sen sisältö automaattisesti kartallesi.",
-  "TakUsageIos1.unfoldableCard4.step2": "Tutki Recon Feedistä saamaasi tilannekuvaan kuuluvia merkkejä painamalla niitä."
+  "TakUsageIos1.unfoldableCard4.step2": "Tutki Recon Feedistä saamaasi tilannekuvaan kuuluvia merkkejä painamalla niitä.",
+
+  "TAKUSAGEWIN1": "TAKUSAGEWIN1",
+  "takUsageWin1.navbarTitle": "Käyttö joukossa: WinTAK",
+  "takUsageWin1.statusBarTitle": "Liikuta karttaa ja merkkaa sijaintisi (1/4)",
+  "takUsageWin1.serviceInfoCard.title": "WinTAK",
+  "takUsageWin1.serviceInfoCard.details": "Käyttö joukossa WinTAK - vaihe 2: <strong>Liikuta karttaa ja merkkaa sijaintis</strong><br />",
+  "takUsageWin1.unfoldableCard1.title": "1. Liikuta ja tarkastele karttaa",
+  "takUsageWin1.unfoldableCard1.step1": "Jos PC:ssä ei ole GPS:ää, niin WinTAK määrittää alkupisteeksi 0-koordinatit.",
+  "takUsageWin1.unfoldableCard1.step2": "Liikuta <strong>hiirellä</strong> karttapohjaa kohti Suomea. Voit zoomata karttaa hiiren rullalla, plus- ja miinusnäppäimillä ja ruudun painikkeilla.",
+  "takUsageWin1.unfoldableCard1.step3": "Klikkaa <strong>kompassikuvaketta</strong> (N) suoristaaksesi kartan.",
+  "takUsageWin1.unfoldableCard1.step4": "Muut joukkosi käyttäjät näkyvät erivärisinä kuvakkeina. Kuvakkeiden väri tulee jokaisen itselleen asettamasta väristä.",
+  "takUsageWin1.unfoldableCard2.title": "2. Määritä sijaintisi tarvittaessa käsin",
+  "takUsageWin1.unfoldableCard2.step1": "Määritä oma sijainti manuaalisesti, jos laitteellasi ei ole GPS:ää. Tämä tapahtuu painamalla oikean alakulman punaisen väristä tietokenttää.",
+  "takUsageWin1.unfoldableCard2.step2": "Etsi karttapohjalta oma sijainti ja klikkaa sitä.",
+  "takUsageWin1.unfoldableCard2.step3": "Tällöin oma merkkisi ilmestyy kartalle. Se tulee näkyviin myös muille käyttäjille.",
+  "takUsageWin1.unfoldableCard3.title": "3. Muuta käsin määritettyä sijaintiasi",
+  "takUsageWin1.unfoldableCard3.step1": "Kun haluat muuttaa omaa sijaintiasi, klikkaa oikealla omaa merkkiäsi <strong>(nuolisymboli)</strong>",
+  "takUsageWin1.unfoldableCard3.step2": "Tämän jälkeen voit valita uuden sijainnin klikkaamalla.",
+
+  "TAKUSAGEWIN2": "TAKUSAGEWIN2",
+  "takUsageWin2.navbarTitle": "Käyttö joukossa: WinTAK",
+  "takUsageWin2.statusBarTitle": "Ylläpidä Recon Feediä (2/4)",
+  "takUsageWin2.serviceInfoCard.title": "WinTAK",
+  "takUsageWin2.serviceInfoCard.details": "Käyttö joukossa WinTAK - vaihe 2: <strong>Ylläpidä Recon Feediä</strong><br />",
+  "takUsageWin2.unfoldableCard1.title": "1. Luo Recon Feed",
+  "takUsageWin2.unfoldableCard1.step1": "WinTAKin työkalurivillä <strong>Home Tab</strong>issä on Data Sync-työkalut.",
+  "takUsageWin2.unfoldableCard1.step2": "Tämä ohje olettaa, että toimit WinTAKilla <strong>komentopaikkana</strong> ja siksi luot tarvittavat feedit. <br /> <br /> Paina <strong>New Feed</strong>.",
+  "takUsageWin2.unfoldableCard1.note1": "Huom. Komentopaikalla <em>yksi käyttäjä</em> luo tarvittavat feedit, ja muut ottavat ne käyttöön!",
+  "takUsageWin2.unfoldableCard1.step3": "Luo uusi <strong>Feed</strong> seuraavilla tiedoilla: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: Public</li><li><strong>Default Role</strong>: Read Only</li></ul>",
+  "takUsageWin2.unfoldableCard1.note2": "<em>(HUOMAA: Groupin oletusasetus pitää vaihtaa asetukseen <strong>Read Only</strong>.)</em>",
+  "takUsageWin2.unfoldableCard1.step4": "Uusi feed on luotu. Feedin luojalla se näkyy heti tilattuna Data Sync-valikossa.",
+  "takUsageWin2.unfoldableCard2.title": "2. Muut KNTOP-käyttäjät tilaavat feedin",
+  "takUsageWin2.unfoldableCard2.step1": "Muut komentopaikan (WinTAKin) käyttäjät tilaavat itselleen luodut feedit, perusmallissa <strong>RECON</strong>-feedin.",
+  "takUsageWin2.unfoldableCard2.step2": "Avautuvasta näkymästä valitse <strong>Download and stay synced.</strong>",
+  "takUsageWin2.unfoldableCard2.step3": "Feed näkyy tällöin käyttäjän Data Sync-valikossa.",
+  "takUsageWin2.unfoldableCard3.title": "3. Vastaanota ilmoituksia",
+  "takUsageWin2.unfoldableCard3.step1": "WinTAK tekee ilmoituksia kuvan mukaisilla notifikaatioilla.",
+  "takUsageWin2.unfoldableCard3.step2": "Painamalla keltaisen lipun symbolia, avautuu <strong>Notifications</strong>-näkymä.",
+  "takUsageWin2.unfoldableCard3.step3": "Näkymässä ovat vastaanotetut ilmoitukset. <strong>Käsittele</strong> ilmoitukset seuraavan ohjeen mukaisesti ja lähetä sen päätteeksi ne <strong>Recon Feediin.</strong>",
+  "takUsageWin2.unfoldableCard4.title": "4. Käsittele ilmoitukset Recon Feediin",
+  "takUsageWin2.unfoldableCard4.step1": "a. Havainnot <strong>avataan ja käsitellään</strong> näin:",
+  "takUsageWin2.unfoldableCard4.step2": "b. Valitse ympyrävalikosta roskakorin oikealla puolella oleva Marker Details-kuvake. Aukeaa <strong>Marker Details</strong>-näkymä",
+  "takUsageWin2.unfoldableCard4.step3": "c. <strong>Käsittele havainto seuraavasti:</strong>",
+  "takUsageWin2.unfoldableCard4.note1": "Kun kirjaat tulkintoja, muista erottaa johtopäätös alkuperäisestä kuvauksesta. Tee tämä merkinnällä <em>HQ JP: (arvio tai johtopäätös)</em>",
+  "takUsageWin2.unfoldableCard4.step4": "b. Muuta havainnon tyyppiä (tuntematon, vih, oma, neutr) johtopäätöksesi perusteella Marker Details-näkymässä.",
+  "takUsageWin2.unfoldableCard4.step5": "\"Change Affiliation\" painettuasi, aukeaa <strong>Type-valikko.</strong> Muuta havainnon merkkiä johtopäätöksesi mukaisesti.",
+  "takUsageWin2.unfoldableCard4.step6": "Merkki päivittyy.",
+  "takUsageWin2.unfoldableCard4.step7": "Lopuksi lisäät merkin otsikkoon merkinnän <strong>(eteen alaviiva)</strong> siitä, että komentopaikka on käsitellyt merkin.",
+  "takUsageWin2.unfoldableCard4.note2": "Huomioi TL JULK. Älä tuo käytössäsi olevaa yläjopon vihollistietoa tähän - käytä peitteitä.",
+  "takUsageWin2.unfoldableCardExample.title": "<em>Esimerkki havainnon käsittelystä</em>",
+  "takUsageWin2.unfoldableCardExample.step1": "Olet saanut ilmoituksen vartiopaikalta <em>lujaa poistuneesta pakettiautosta.</em> ja tästä keltaisen havaintomerkin. Avaa Marker Details ja paina Change Affiliation.",
+  "takUsageWin2.unfoldableCard5.title": "5. Päätä, onko heti ilmoitettava asia",
+  "takUsageWin2.unfoldableCard5.step1": "Päätä, onko havainto <em>heti ilmoitettava asia</em> vai ei.",
+  "takUsageWin2.unfoldableCard5.note1": "TÄRKEÄÄ! Jos havainto on heti ilmoitettava asia, lähetä ilmoitus käsketyillä viestivälineillä käsketyille vastaanottajille.",
+  "takUsageWin2.unfoldableCard7.title": "6. Lähetä merkki Recon Feediin",
+  "takUsageWin2.unfoldableCard7.step1": "Jotta kaikki joukkosi TAK-käyttäjät pääsevät näkemään käsittelemäsi merkin, lähetä merkki Recon Feediin painamalla <strong>Marker Details</strong>-valikossa kuvan mukaista <strong>Send</strong>-nappia.",
+  "takUsageWin2.unfoldableCard7.step2": "Valitse Include Attachments-kysymykseen <strong>Yes</strong>.",
+  "takUsageWin2.unfoldableCard7.step3": "Oikeaan reunaan aukeaa painamalla Send-nappia Marker Details-valikossa <strong>Send To</strong>-valikko.",
+  "takUsageWin2.unfoldableCard7.step4": "<li>Avaa <strong>Data Sync Feeds-valinta.</strong></li><li>Valitse Recon Feed.</li><li>Paina alareunasta <strong>Send</strong>-nappia.</li><br>Havainto on käsitelty ja jaettu joukolle.",
+  "takUsageWin2.unfoldableCard7.step5": "Toimi näin jokaisen <strong>käsitellyn</strong> havainnon kanssa.",
+
+  "TAKUSAGEWIN3": "TAKUSAGEWIN3",
+  "takUsageWin3.navbarTitle": "Käyttö joukossa: WinTAK",
+  "takUsageWin3.statusBarTitle": "Toimi komentopaikkana (3/4)",
+  "takUsageWin3.serviceInfoCard.title": "WinTAK",
+  "takUsageWin3.serviceInfoCard.details": "Käyttö joukossa WinTAK - vaihe 3: <strong>Toimi komentopaikkana</strong><br />",
+  "takUsageWin3.unfoldableCard1.title": "1. Komentopaikkana toimiminen",
+  "takUsageWin3.unfoldableCard1.step1": "Mikäli olet seurannut ohjeita, tiedät nyt, miten toiminta WinTAKilla komentopaikkana tapahtuu.<br /><br />Seuraa <strong>Käyttömallia</strong> jatkuvassa toiminnassa. Käyttömalli kuvataan <em>Käyttö joukossa-etusivulla taistelijan ja komentopaikan näkökulmasta.</em><br /><br />Seuraavalla sivulla kuvataan tietohuolto. Alla muistilista komentopaikan tehtävistä kokonaisuudessaan.",
+  "takUsageWin3.unfoldableCard1.step2": "Komentopaikalla tulee tehdä jatkuvasti muun muassa seuraavia tehtäviä:<br /><br /><li><strong>1. Tunne</strong> tarkoin joukon tehtävä ja sen suoritusvaihe joukkueen ja ryhmän tarkkuudella.</li><li><strong>2. Vastaanota</strong> joukolta heti ilmoitettavat asiat.</li><li><strong>3. Vastaanota</strong> joukolta määräaikaiset ja -muotoiset (tiettyyn kellonaikaan saapuvat) tilanneilmoitukset.</li><li><strong>4. Ylläpidä</strong> viestipäiväkirjaa kaikin välinein tulleista ilmoituksista.</li><li><strong>5. Ylläpidä</strong> numeroitua tiedusteludiaaria omalta joukolta, naapureilta ja ylhäältä tulleista havainnoista ja vihollistiedoista.</li><li><strong>6. Ylläpidä</strong> tietojärjestelmiä, joista TAK on yksi.</li>",
+  "takUsageWin3.unfoldableCard1.note": "Nämä 6 tehtävää toimivat komentopaikan tietolähteinä. Käytä näitä lähteitä, ja aktiivisesti etsi ja kysele lisää tietoa. Tehtäväsi on tiedon avulla muodostaa tilannekuva - eli käsittää, mitä ympärillä tapahtuu <em>nyt</em>, <em>6 tunnin</em> ja <em>24 tunnin</em> päästä.<br>",
+  "takUsageWin3.unfoldableCard1.step3": "Tällä tehtävälläsi TAK-palvelu <em>on vain yksi väline</em>. Älä anna järjestelmän ja ilmoitusten viedä huomiota - käytä niitä kerätäksesi tietoa, ja jakaaksesi sitä joukolle. <br>Näin luodaan joukon tietoylivoima omassa ympäristössä.",
+
+  "TAKUSAGEWIN4": "TAKUSAGEWIN4",
+  "takUsageWin4.navbarTitle": "Käyttö joukossa: WinTAK",
+  "takUsageWin4.statusBarTitle": "Tietohuolto (4/4)",
+  "takUsageWin4.serviceInfoCard.title": "WinTAK",
+  "takUsageWin4.serviceInfoCard.details": "Käyttö joukossa WinTAK - vaihe 4: <strong>Tietohuolto</strong><br />",
+  "takUsageWin4.unfoldableCard1.title": "1. Liikuta ja tarkastele karttaa",
+  "takUsageWin4.unfoldableCard1.step1": "Palauta WinTAK tehdasasetuksille seuraavasti.<br /><br />Paina kolme päällekkäistä viivaa -symbolia (hampurilaisvalikko) vasemmassa yläkulmassa.",
+  "takUsageWin4.unfoldableCard1.step2": "Paina <strong>Roskakori</strong>-kuvaketta (<strong>Clear Content</strong>).",
+  "takUsageWin4.unfoldableCard1.step3": "Tee Clear Content-valikossa kuvan mukaiset valinnat:",
+  "takUsageWin4.unfoldableCard1.step4": "<strong>Clear Now</strong>-nappi ilmestyy, kun <strong>OFF-</strong>kytkimet on vedetty Locked-asentoon.",
+  "takUsageWin4.unfoldableCard1.step5": "Paina <strong>Clear Now!</strong>.",
+  "takUsageWin4.unfoldableCard1.step6": "Muista poistaa laitteelta käsin viestiperustepakettisi <em>Nimi.zip</em>.",
+  "takUsageWin4.unfoldableCard1.step7": "Tietohuolto on nyt suoritettu. Muista suorittaa tietohuolto aina operaation päätteeksi."
 }
