--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -629,5 +629,89 @@
   "TakUsageIos1.unfoldableCard3.note": "Remember, a marker is never a sufficient notification. Always send a message about your observation aswell.",
   "TakUsageIos1.unfoldableCard4.title": "4. Receive Markers from Recon Feed",
   "TakUsageIos1.unfoldableCard4.step1": "If you have activated the <strong>Recon Feed</strong> with Data Sync as instructed in the setup guide, its content will automatically update on your map.",
-  "TakUsageIos1.unfoldableCard4.step2": "Explore the markers that are part of the situational picture received from the Recon Feed by pressing them."
+  "TakUsageIos1.unfoldableCard4.step2": "Explore the markers that are part of the situational picture received from the Recon Feed by pressing them.",
+
+  "TAKUSAGEWIN1": "TAKUSAGEWIN1",
+  "takUsageWin1.navbarTitle": "Usage Guide: WinTAK",
+  "takUsageWin1.statusBarTitle": "Locate Yourself (1/4)",
+  "takUsageWin1.serviceInfoCard.title": "WinTAK",
+  "takUsageWin1.serviceInfoCard.details": "Usage Guide WINTAK - Part 1: <strong>Locate Yourself</strong><br />",
+  "takUsageWin1.unfoldableCard1.title": "1. Move and examine the map",
+  "takUsageWin1.unfoldableCard1.step1": "If your PC does not have a GPS, WinTAK sets the starting point to 0-coordinates.",
+  "takUsageWin1.unfoldableCard1.step2": "Move the map <strong>with the mouse</strong> towards Finland. You can zoom in on the map with the mouse wheel, plus and minus keys, and on-screen buttons.",
+  "takUsageWin1.unfoldableCard1.step3": "Click the <strong>compass icon</strong> (N) to straighten the map.",
+  "takUsageWin1.unfoldableCard1.step4": "Other users in your group appear as icons in different colors. The color of the icons is determined by the color each user has set for themselves.",
+  "takUsageWin1.unfoldableCard2.title": "2. Manually define your location if necessary",
+  "takUsageWin1.unfoldableCard2.step1": "Manually define your own location if your device does not have GPS. This is done by pressing the red information field in the bottom right corner.",
+  "takUsageWin1.unfoldableCard2.step2": "Find your location on the map base and click on it.",
+  "takUsageWin1.unfoldableCard2.step3": "Then your own marker appears on the map. It also becomes visible to other users.",
+  "takUsageWin1.unfoldableCard3.title": "3. Change your manually defined location",
+  "takUsageWin1.unfoldableCard3.step1": "When you want to change your own location, click on your own marker on the right <strong>(arrow symbol)</strong>",
+  "takUsageWin1.unfoldableCard3.step2": "After that, you can select a new location by clicking.",
+
+  "TAKUSAGEWIN2": "TAKUSAGEWIN2",
+  "takUsageWin2.navbarTitle": "Usage Guide: WinTAK",
+  "takUsageWin2.statusBarTitle": "Maintain the Recon Feed (2/4)",
+  "takUsageWin2.serviceInfoCard.title": "WinTAK",
+  "takUsageWin2.serviceInfoCard.details": "Usage Guide: WinTAK - Part 2: <strong>Maintain the Recon Feed</strong><br />",
+  "takUsageWin2.unfoldableCard1.title": "1. Create a Recon Feed",
+  "takUsageWin2.unfoldableCard1.step1": "In WinTAK's toolbar, the <strong>Home Tab</strong> contains Data Sync tools.",
+  "takUsageWin2.unfoldableCard1.step2": "This guide assumes you are operating WinTAK as a <strong>command post</strong>, thus you create the necessary feeds. <br /> <br /> Press <strong>New Feed</strong>.",
+  "takUsageWin2.unfoldableCard1.note1": "Note. At the Command Post, <em>one user</em> creates the necessary feeds, and other Command Post users as well as rest of the unit use them!",
+  "takUsageWin2.unfoldableCard1.step3": "Create a new <strong>Feed</strong> with the following details: <ul><li><strong>Name</strong>: Recon</li><li><strong>Group</strong>: Public</li><li><strong>Default Role</strong>: Read Only</li></ul>",
+  "takUsageWin2.unfoldableCard1.note2": "<em>(NOTE: The default group setting needs to be changed to <strong>Read Only</strong>.)</em>",
+  "takUsageWin2.unfoldableCard1.step4": "The new feed is created. It immediately appears as subscribed in the Data Sync menu for the feed creator.",
+  "takUsageWin2.unfoldableCard2.title": "2. Other Command Post Users Subscribe to the Feed",
+  "takUsageWin2.unfoldableCard2.step1": "Other command post (WinTAK) users subscribe to the created feeds, typically the <strong>RECON</strong> feed.",
+  "takUsageWin2.unfoldableCard2.step2": "From the opened view, select <strong>Download and stay synced.</strong>",
+  "takUsageWin2.unfoldableCard2.step3": "The feed then appears in the user's Data Sync menu.",
+  "takUsageWin2.unfoldableCard3.title": "3. Receive Notifications",
+  "takUsageWin2.unfoldableCard3.step1": "WinTAK notifies with the pictured notifications.",
+  "takUsageWin2.unfoldableCard3.step2": "By pressing the yellow flag symbol, the <strong>Notifications</strong> view opens.",
+  "takUsageWin2.unfoldableCard3.step3": "The view lists received notifications. <strong>Process</strong> the notifications according to the following instructions and send them to the <strong>Recon Feed</strong> afterwards.",
+  "takUsageWin2.unfoldableCard4.title": "4. Process Notifications into the Recon Feed",
+  "takUsageWin2.unfoldableCard4.step1": "a. Observations are <strong>opened and processed</strong> as follows:",
+  "takUsageWin2.unfoldableCard4.step2": "b. Select the Marker Details icon to the right of the trash can from the circle menu. The <strong>Marker Details</strong> view opens",
+  "takUsageWin2.unfoldableCard4.step3": "c. <strong>Process the observation as follows:</strong>",
+  "takUsageWin2.unfoldableCard4.note1": "When recording interpretations, distinguish the conclusion from the original description. Do this with the notation <em>HQ CONCLUSION: (assessment or conclusion)</em>",
+  "takUsageWin2.unfoldableCard4.step4": "b. Change the observation type (unknown, friend, own, neutral) based on your conclusion in the Marker Details view.",
+  "takUsageWin2.unfoldableCard4.step5": "After pressing \"Change Affiliation\", the <strong>Type menu</strong> opens. Change the observation marker according to your conclusion.",
+  "takUsageWin2.unfoldableCard4.step6": "The marker updates.",
+  "takUsageWin2.unfoldableCard4.step7": "Finally, add a notation to the marker's title <strong>(underscore in front)</strong> indicating that the command post has processed the marker.",
+  "takUsageWin2.unfoldableCard4.note2": "Consider OPSEC. Do not bring operational enemy information into this - use cover terms.",
+  "takUsageWin2.unfoldableCardExample.title": "<em>Example of Processing an Observation</em>",
+  "takUsageWin2.unfoldableCardExample.step1": "You have received a notification from a watch post about a <em>speeding van</em>, resulting in a yellow observation marker. Open Marker Details and press Change Affiliation.",
+  "takUsageWin2.unfoldableCard5.title": "5. Decide Whether It Needs Immediate Reporting",
+  "takUsageWin2.unfoldableCard5.step1": "Determine whether the observation is an <em>immediate reportable matter</em> or not.",
+  "takUsageWin2.unfoldableCard5.note1": "IMPORTANT! If the observation is an immediate reportable matter, send a report using the prescribed messaging tools to the prescribed recipients.",
+  "takUsageWin2.unfoldableCard7.title": "6. Send the Marker to the Recon Feed",
+  "takUsageWin2.unfoldableCard7.step1": "To allow all your TAK users in the force to see the processed marker, send the marker to the Recon Feed by pressing the <strong>Send</strong> button in the Marker Details menu.",
+  "takUsageWin2.unfoldableCard7.step2": "Choose <strong>Yes</strong> to the Include Attachments question.",
+  "takUsageWin2.unfoldableCard7.step3": "Pressing the Send button in the Marker Details menu opens the <strong>Send To</strong> menu on the right side.",
+  "takUsageWin2.unfoldableCard7.step4": "Proceed with each <strong>processed</strong> observation in this manner.",
+
+  "TAKUSAGEWIN3": "TAKUSAGEWIN3",
+  "takUsageWin3.navbarTitle": "Usage Guide: WinTAK",
+  "takUsageWin3.statusBarTitle": "Act as Command Post (3/4)",
+  "takUsageWin3.serviceInfoCard.title": "WinTAK",
+  "takUsageWin3.serviceInfoCard.details": "Usage Guide WinTAK - Part 3: <strong>Act as Command Post</strong><br />",
+  "takUsageWin3.unfoldableCard1.title": "1. Acting as a Command Post",
+  "takUsageWin3.unfoldableCard1.step1": "If you have followed the instructions, you now know how to operate WinTAK at the command post.<br /><br />Follow the <strong>Usage Model</strong> in continuous operation. The usage model is described from the perspective of the fighter and the command post on the Use in the Field homepage.<br /><br />The next page describes information support. Below is a checklist of the command post's tasks in entirety.",
+  "takUsageWin3.unfoldableCard1.step2": "The command post must continuously perform the following tasks, among others:<br /><br /><li><strong>1. Know</strong> the mission of the force and its execution phase with the precision of a squad and team.</li><li><strong>2. Receive</strong> immediately reportable matters from the force.</li><li><strong>3. Receive</strong> periodic and formatted (arriving at a specific time) situation reports from the force.</li><li><strong>4. Maintain</strong> a message journal of all notifications received by all means.</li><li><strong>5. Maintain</strong> a numbered intelligence diary from own forces, neighbors, and top-down observations and enemy information.</li><li><strong>6. Maintain</strong> information systems, of which TAK is one.</li>",
+  "takUsageWin3.unfoldableCard1.note": "These 6 tasks serve as information sources for the command post. Use these sources actively seek and inquire more information. Your task is to form a situational awareness - to understand what is happening around <em>now</em>, in <em>6 hours</em>, and in <em>24 hours</em>.<br>",
+  "takUsageWin3.unfoldableCard1.step3": "In this mission, the TAK service <em>is just one tool</em>. Do not let the system and notifications take your attention - use them to collect information, and to share it with the force.<br>This creates information superiority in the environment for the force.",
+
+  "TAKUSAGEWIN4": "TAKUSAGEWIN4",
+  "takUsageWin4.navbarTitle": "Usage Guide: WinTAK",
+  "takUsageWin4.statusBarTitle": "Post-Operation Data Cleansing (4/4)",
+  "takUsageWin4.serviceInfoCard.title": "WinTAK",
+  "takUsageWin4.serviceInfoCard.details": "Usage Guide WinTAK - Part 4: <strong>Post-Operation Data Cleansing</strong><br />",
+  "takUsageWin4.unfoldableCard1.title": "1. Move and examine the map",
+  "takUsageWin4.unfoldableCard1.step1": "Reset WinTAK to factory settings as follows.<br /><br />Press the three stacked lines symbol (hamburger menu) in the top left corner.",
+  "takUsageWin4.unfoldableCard1.step2": "Press the <strong>Trash Can</strong> icon (<strong>Clear Content</strong>).",
+  "takUsageWin4.unfoldableCard1.step3": "Make the selections in the Clear Content menu as shown in the picture:",
+  "takUsageWin4.unfoldableCard1.step4": "The <strong>Clear Now</strong> button appears when the <strong>OFF-</strong>switches are slid into Locked position.",
+  "takUsageWin4.unfoldableCard1.step5": "Press <strong>Clear Now!</strong>",
+  "takUsageWin4.unfoldableCard1.step6": "Remember to manually remove your message foundation package <em>Name.zip</em> from the device.",
+  "takUsageWin4.unfoldableCard1.step7": "Post-Operation Cleansing has now been completed. Remember to perform the cleasing at the end of every operation."
 }
