--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -61,11 +61,12 @@
   "ENROLLMENTVIEW": "ENROLLMENTVIEW",
   "enrollment-approved": "Sinut on hyväksytty palveluun.",
   "continue-clicking-here": "Jatka painamalla tästä.",
-  "awaiting-approval": "Olet odotustilassa!",
+  "awaiting-approval": "Olet Odotushuoneessa!",
   "copy-link-admin": "Kopioi linkki ylläpitäjälle.",
   "action-failed": "Toiminto epäonnistui:",
   "approval-code": "Hyväksyntäkoodisi:",
   "approval-waiting-title": "Odotat hyväksyntää palveluun (ohje).",
+  "waiting-approval-instruction": "Odotushuoneessa odotat jotakuta ylläpitäjistäsi hyväksymään sinua tähän palveluun. Näytä ylläpitäjällesi allaolevaa QR-koodia, tai paina 'Kopioi linkki ylläpitäjälle' ja lähetä se esimerkiksi pikaviestillä hänelle.",
   "approval-instruction-intro": "Odotat ylläpitäjän hyväksyntää palveluun. Hyväksyntä tapahtuu jollakin näistä kolmesta tavasta:",
   "approval-instruction-qr": "Ylläpitäjä skannaa oheisen <strong>QR-koodin</strong>, joka sisältää hyväksymislinkin.",
   "approval-instruction-copy": "Kopioi ja lähetä ylläpitäjälle <strong>hyväksymislinkki.</strong>",
