Implement ability to override auto detect for OS for tak zip delivery
Also remove guidesection as it is not needed, do ErrorView fix as well

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -27,8 +27,8 @@
   "ERRORVIEW": "ERRORVIEW",
   "error.mtls_fail.title": "Invalid mTLS Key",
   "error.mtls_fail.details": "Your browser thinks your mTLS key is invalid (or it is missing). Try closing the browser and starting it again, especially if you just installed the key on your device.",
-  "error.fall_back.title": "Error",
-  "error.fall_back.details": "An error occurred for which there is not yet an error message.",
+  "error.fall_back.title": "Error occurred",
+  "error.fall_back.details": "This error does not yet have an Error Message. Please report it to the devs!",
   "error.reporting.linkText": "When you have time, please report the error! Use the form behind this link, select Deploy App and Bug as the type of report. The developers thank you!",
   "error.returnHome": "Return to Home Page",
 
@@ -256,6 +256,22 @@
   "serviceTak.guideButton.usage": "Usage Guide",
   "serviceTak.grabZipButton": "Download your Client Package",
   "serviceTak.grabZipButton.loading": "Loading...",
+
+  "TAKZIPDOWNLOAD": "TAKZIPDOWNLOAD",
+  "takZipDownload.downloadTitle": "Download Your Client Package",
+  "takZipDownload.downloadButton": "Download Client Package",
+  "takZipDownload.downloadDescriptionPart1": "You are about to download your TAK Client Package as",
+  "takZipDownload.downloadDescriptionPart2": "-compatible.",
+  "takZipDownload.downloadDescriptionPart3": "Is this correct? If not, please change it using the selector above as necessary.",
+  "takZipDownload.downloadSuccessTitle": "Client Package Downloaded.",
+  "takZipDownload.downloadSuccessDescription": "Your Client Package has been downloaded. Please install it to your application, according to the Quickstart Guide.",
+  "takZipDownload.downloadErrorTitle": "Error in Downloading Client Package:",
+  "takZipDownload.downloadErrorDescription": "Downloading your Client Package failed. Please try again later.",
+  "takZipDownload.errorFromApplication": "Error message from the application:",
+  "takZipDownload.genericErrorMessage": "Unidentified error.",
+  "takZipDownload.androidOrWin": "Android ATAK or Windows WinTAK",
+  "takZipDownload.osOptions.ios": "iOS ITAK",
+  "takZipDownload.iAmDownloading": "Fetching your package...",
 
   "SERVICETAKUSAGECARD": "SERVICETAKUSAGECARD",
   "serviceTakUsageCard.title": "Purpose",
