--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -6,6 +6,7 @@
   "copy-link": "Copy link for the administrator",
   "go-back": "Peruuta",
   "close": "Sulje",
+  "download": "Lataa",
   "footer.feedbackFormLink": "https://docs.google.com/forms/d/e/1FAIpQLSehHTASMmqszEMOVOwMvjUNOj-lcEGskk58sUjsmurJDlvFZw/viewform",
   "common.loadingText": "Lataan...",
 
@@ -29,7 +30,7 @@
   "error.mtls_fail.details": "Selaimen mielestä mTLS-avaimesi on virheellinen (tai sitä ei ole). Jos juuri asensit avaimen laitteellesi, kokeile sulkea selain ja käynnistää se uudelleen.",
   "error.fall_back.title": "Virhe",
   "error.fall_back.details": "Tapahtui virhe, jolle ei ole vielä virheilmoitusta.",
-  "error.reporting": "Tee ehtiessäsi virheilmoitus! Käytä tämän inkin takaa löytyvää lomaketta, valitse Rasenmaeher ja Bugi ilmoituksen tyypiksi. Kehittäjät kiittävät!",
+  "error.reporting": "Tee ehtiessäsi virheilmoitus! Käytä tämän linkin takaa löytyvää lomaketta, valitse Rasenmaeher ja Bugi ilmoituksen tyypiksi. Kehittäjät kiittävät!",
   "error.returnHome": "Palaa etusivulle",
 
   "404VIEW": "404VIEW",
@@ -255,6 +256,22 @@
   "serviceTak.guideButton.usage": "Käyttö joukossa",
   "serviceTak.grabZipButton": "Lataa viestiperustepaketti",
   "serviceTak.grabZipButton.loading": "Ladataan...",
+
+  "TAKZIPDOWNLOAD": "TAKZIPDOWNLOAD",
+  "takZipDownload.downloadTitle": "Lataa viestiperustepakettisi",
+  "takZipDownload.downloadButton": "Lataa viestiperustepaketti",
+  "takZipDownload.downloadDescriptionPart1": "Olet lataamassa viestiperustepakettiasi",
+  "takZipDownload.downloadDescriptionPart2": "-yhteensopivana.",
+  "takZipDownload.downloadDescriptionPart3": "Vastaako tämä laitettasi? Jos ei, muuta sitä tarvittaessa yltä valikosta.",
+  "takZipDownload.downloadSuccessTitle": "Viestiperustepaketti ladattu.",
+  "takZipDownload.downloadSuccessDescription": "Viestiperustepaketti ladattu. Lataa paketti sovellukseen käyttöönotto-ohjeiden mukaisesti.",
+  "takZipDownload.downloadErrorTitle": "Virhe viestiperustepaketin lataamisessa:",
+  "takZipDownload.downloadErrorDescription": "Viestiperustepaketin lataaminen epäonnistui. Yritä myöhemmin uudelleen.",
+  "takZipDownload.errorFromApplication": "Virheilmoitus sovellukselta:",
+  "takZipDownload.genericErrorMessage": "Tunnistamaton virhe.",
+  "takZipDownload.androidOrWin": "Android ATAK tai Windows WinTAK",
+  "takZipDownload.osOptions.ios": "iOS ITAK",
+  "takZipDownload.iAmDownloading": "Hankin perustepakettiasi...",
 
   "SERVICETAKUSAGECARD": "SERVICETAKUSAGECARD",
   "serviceTakUsageCard.title": "Käyttötarkoitus lyhyesti",
