Fix some translations

--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -3,7 +3,7 @@
   "login": "Kirjaudu",
   "awaiting-response": "Odottaa vastausta...",
   "link-copied": "Link copied!",
-  "copy-link": "Copy link for the administrator",
+  "copy-link": "Kopioi hyväksyntälinkki ylläpitäjälle",
   "go-back": "Peruuta",
   "close": "Sulje",
   "download": "Lataa",
@@ -63,11 +63,11 @@
   "enrollment-approved": "Sinut on hyväksytty palveluun.",
   "continue-clicking-here": "Jatka painamalla tästä.",
   "awaiting-approval": "Olet Odotushuoneessa!",
-  "copy-link-admin": "Kopioi linkki ylläpitäjälle.",
+  "copy-link-admin": "Kopioi linkki ylläpitäjälle",
   "action-failed": "Toiminto epäonnistui:",
   "approval-code": "Hyväksyntäkoodisi:",
   "approval-waiting-title": "Odotat hyväksyntää palveluun (ohje).",
-  "waiting-approval-instruction": "Odotushuoneessa odotat jotakuta ylläpitäjistäsi hyväksymään sinua tähän palveluun. Näytä ylläpitäjällesi allaolevaa QR-koodia, tai paina 'Kopioi linkki ylläpitäjälle' ja lähetä se esimerkiksi pikaviestillä hänelle.",
+  "waiting-approval-instruction": "Odotat ylläpitäjääsi hyväksymään sinut tähän palveluun. Näytä ylläpitäjällesi allaolevaa QR-koodia, tai paina 'Kopioi linkki ylläpitäjälle' ja lähetä se esimerkiksi pikaviestillä hänelle.",
   "approval-instruction-intro": "Odotat ylläpitäjän hyväksyntää palveluun. Hyväksyntä tapahtuu jollakin näistä kolmesta tavasta:",
   "approval-instruction-qr": "Ylläpitäjä skannaa oheisen <strong>QR-koodin</strong>, joka sisältää hyväksymislinkin.",
   "approval-instruction-copy": "Kopioi ja lähetä ylläpitäjälle <strong>hyväksymislinkki.</strong>",
