--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -68,7 +68,7 @@
   "waiting-approval-instruction": "You are awaiting your administrator to approve you to the services. Show them the QR code below, or press 'Copy Link' and send them the approval link.",
   "approval-waiting-title": "Waiting for Approval (instructions).",
   "approval-instruction-intro": "You are waiting administrator to approve you to the service. Approval can occur in one of these three ways:",
-  "approval-instruction-qr": "Your administrator scans the <strong>QR code</strong> above from your screen. It contains the approval link, which the admin can access.",
+  "approval-instruction-qr": "Your administrator may scan the <strong>QR code</strong> above from your screen. It contains the approval link, which the admin can access.",
   "approval-instruction-copy": "You may copy and send the <strong>approval link</strong> to your administrator, using a trusted method, such as email or an app.",
   "approval-instruction-send": "Just send your <strong>approval code</strong> to your administrator, who will enter it into their approval view.",
 
