Be able to change which os instructions you see

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -86,6 +86,7 @@
   "mtls-installation-instructions": "Installation instructions",
   "download-your-key": "Download your key",
   "navigate-with-your-key": "Use your key to access the services",
+  "mtls-download-whichtoshow": "Installation instructions:",
 
   "MTLSINSTRUCTIONS-MAC": "MTLSINSTRUCTIONS-MAC",
   "mac-instructions.download-key.title": "1. Download Your Key",
