Make enrollmentview have more clear ApproLink button
Users have not always recognized it previously.

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -64,10 +64,12 @@
   "enrollment-approved": "You have been approved for the service.",
   "continue-clicking-here": "Continue by clicking here.",
   "awaiting-approval": "You are in the Waiting Room!",
-  "copy-link-admin": "Copy the approval link to the administrator",
+  "copy-link-admin": "Press to copy your Approval Link",
+  "admin-link-copied": "Link copied! Now send it to your admin.",
   "action-failed": "Action failed:",
-  "approval-code": "Your approval code:",
-  "waiting-approval-instruction": "You are awaiting your administrator to approve you to the services. Show them the QR code below, or press 'Copy Link' and send them the approval link.",
+  "approval-code": "Your approval code, if needed:",
+  "waiting-approval-instruction": "You are awaiting your administrator to approve you to the services. Copy and send your Admin your Approval Link:",
+  "waiting-approval-instruction3": "Alternatively, show Admin your QR code:",
   "approval-waiting-title": "Waiting for Approval (instructions).",
   "approval-instruction-intro": "You are waiting administrator to approve you to the service. Approval can occur in one of these three ways:",
   "approval-instruction-qr": "Your administrator may scan the <strong>QR code</strong> above from your screen. It contains the approval link, which the admin can access.",
