--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -65,11 +65,13 @@
   "enrollment-approved": "Sinut on hyväksytty palveluun.",
   "continue-clicking-here": "Jatka painamalla tästä.",
   "awaiting-approval": "Olet Odotushuoneessa!",
-  "copy-link-admin": "Kopioi linkki ylläpitäjälle",
+  "copy-link-admin": "Kopioi hyväksyntälinkkisi painamalla!",
   "action-failed": "Toiminto epäonnistui:",
-  "approval-code": "Hyväksyntäkoodisi:",
+  "admin-link-copied": "Linkkisi kopioitu! Lähetä se ylläpitäjällesi.",
+  "approval-code": "Hyväksyntäkoodisi tarvittaessa:",
   "approval-waiting-title": "Odotat hyväksyntää palveluun (ohje).",
-  "waiting-approval-instruction": "Odotat ylläpitäjääsi hyväksymään sinut tähän palveluun. Näytä ylläpitäjällesi allaolevaa QR-koodia, tai paina 'Kopioi linkki ylläpitäjälle' ja lähetä se esimerkiksi pikaviestillä hänelle.",
+  "waiting-approval-instruction": "Odotat ylläpitäjääsi hyväksymään sinut tähän palveluun. Kopioi, liitä ja lähetä hyväksyntälinkki ylläpitäjälle:",
+  "waiting-approval-instruction3": "Voit myös näyttää ylläpitäjälle QR-koodia alla:",
   "approval-instruction-intro": "Odotat ylläpitäjän hyväksyntää palveluun. Hyväksyntä tapahtuu jollakin näistä kolmesta tavasta:",
   "approval-instruction-qr": "Ylläpitäjä skannaa oheisen <strong>QR-koodin</strong>, joka sisältää hyväksymislinkin.",
   "approval-instruction-copy": "Kopioi ja lähetä ylläpitäjälle <strong>hyväksymislinkki.</strong>",
