let's talk about deploy app for clarity
also linux mtlsinstructions is not an option, yet

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -79,7 +79,7 @@
   "MTLSINFOMODAL": "MTLSINFOMODAL",
   "what-is-mtls": "What is mTLS?",
   "what-is-mtls-title": "What is mTLS?",
-  "mtls-description": "By using an mTLS key installed on your device to connect to our service, we can ensure the connection comes <strong>from you.</strong> No one else can impersonate you. Likewise, you are assured that on the other end, it's us. <br /><br /> All services from Rasenmaeher that you take into use, encrypt their traffic with your mTLS key.",
+  "mtls-description": "By using an mTLS key installed on your device to connect to our service, we can ensure the connection comes <strong>from you.</strong> No one else can impersonate you. Likewise, you are assured that on the other end, it's us. <br /><br /> All services from Deploy App (Rasenmaeher) that you take into use, encrypt their traffic with your mTLS key.",
   "ok": "OK",
 
   "MTLSCREATEVIEW": "MTLSCREATEVIEW",
@@ -124,9 +124,9 @@
   "ios-instructions.step3.description1": "After selecting the key, your device will ask for your passcode. Enter it.",
   "ios-instructions.step3.description2": "The device gives a warning. Press <strong>Install</strong> in the top right corner.",
   "ios-instructions.step3.description3": "The device will ask for the password for this key. The password is always the <strong>callsign</strong> you provided, for example, FIGHTER1.",
-  "ios-instructions.step3.description4": "After a successful password entry, the device will announce that the profile, i.e., the key, is installed. Then return to the Rasenmaeher app in your browser. There, press the <strong>Access the service with your key</strong> button.",
+  "ios-instructions.step3.description4": "After a successful password entry, the device will announce that the profile, i.e., the key, is installed. Then return to this Deploy App in your browser. There, press the <strong>Access the service with your key</strong> button.",
   "ios-instructions.step3.description5": "The browser states that the application requires a client certificate (this will be the key you just installed). Press <strong>Continue.</strong>",
-  "ios-instructions.step3.description6": "Your key is now set up! From now on, whenever you reach Rasenmaeher, the service will recognize you by your key. <br /><br /> If you end up on the login page, press the \"I have a key\" button.",
+  "ios-instructions.step3.description6": "Your key is now set up! From now on, whenever you reach the Deploy App, the service will recognize you by your key. <br /><br /> If you end up on the login page, press the \"I have a key\" button.",
 
   "MTLSWINDOWSINSTRUCTIONS": "MTLSWINDOWSINSTRUCTIONS",
   "windows-instructions.step1.title": "1. Download Key",
@@ -168,7 +168,7 @@
   "userManagement.rejectionFailedMessage": "Failure -",
   "userManagement.serviceInfoCard.details": "Manage users in this view. <strong>Admins</strong> are users that are able to access these user management tools. <strong>Fighters</strong> are basic users, who have access to your services.",
   "userManagement.howItWorks.whatPromote": "Promoting: <strong>Promote</strong> or <strong>demote</strong> users. Promoted users gain the same rights as you currently have, as an admin.",
-  "userManagement.howItWorks.whatRemove": "Removing: Removing users will <strong>revoke</strong> their access to Rasenmaeher, and <strong>all</strong> connected services. For example, a removed user will no longer be able to connect to your situation awareness service that is managed by Rasenmaeher.",
+  "userManagement.howItWorks.whatRemove": "Removing: Removing users will <strong>revoke</strong> their access to this Deploy App, and <strong>all</strong> connected services. For example, a removed user will no longer be able to connect to your situation awareness service that is managed by this Deploy App.",
   "userManagement.mainDialogTitle": "Manage User",
   "userManagement.mainDialogQuestion": "What do you want to do with the user?",
   "userManagement.revoke.areYouSure": "Are you sure?",
