Add clientzip download button to the Manuals too

--- a/src/assets/locale/en.json
+++ b/src/assets/locale/en.json
@@ -332,8 +332,8 @@
   "takQuickstartAndroid1.unfoldableCard1.title": "1. Download the applications",
   "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Download ATAK (1/2)</h3><strong>Download</strong> the ATAK-CIV app from the Play Store and install it. Download link below:",
   "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Download ATAK Data Sync-plugin (2/2)</h3><strong>Download</strong> the ATAK Data Sync-plugin, and install it. Download link below:",
-  "takQuickstartAndroid1.unfoldableCard2.title": "2. Download your client package",
-  "takQuickstartAndroid1.unfoldableCard2.description1": "Download your client packege from the <strong>front page</strong> of this service by pressing the green <strong>Download your Client Package</strong> button.<br><br>Save the .zip file.",
+  "takQuickstartAndroid1.unfoldableCard2.title": "2. Download your Client Package",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Download your client packege  by pressing the green <strong>Download your Client Package</strong> button. You can access the same button from the front page, too.<br><br>Save the .zip file.",
   "takQuickstartAndroid1.unfoldableCard2.note": "NOTE! The zip file does not need to be extracted!",
   "takQuickstartAndroid1.unfoldableCard3.title": "3. Open the ATAK app and grant it the requested permissions",
   "takQuickstartAndroid1.unfoldableCard3.description1": "Open the app. Grant all permissions the application requests.",
@@ -425,7 +425,7 @@
   "TakQuickstartIos1.unfoldableCard1.title": "1. Download the Applications",
   "TakQuickstartIos1.unfoldableCard1.description1": "<h3>Download iTAK (1/2)</h3><strong>Download</strong> the iTAK app from the App Store and install it. The download link is below, <strong>press</strong>:",
   "TakQuickstartIos1.unfoldableCard2.title": "2. Download your Client Package",
-  "TakQuickstartIos1.unfoldableCard2.description1": "Download your personal Client Package from the <strong>front page</strong> of this service by pressing the green <strong>Download your Client Package</strong> button.<br><br>Save the .zip file.",
+  "TakQuickstartIos1.unfoldableCard2.description1": "Download your client packege  by pressing the green <strong>Download your Client Package</strong> button. You can access the same button from the front page, too.<br><br>Save the .zip file.",
   "TakQuickstartIos1.unfoldableCard2.note": "NOTE! The zip file does not need to be extracted!",
 
   "TAKQUICKSTARTIOS2": "TAKQUICKSTARTIOS2",
@@ -519,10 +519,12 @@
   "TakQuickstartWin2.unfoldableCard1.title": "1. Download WinTAK",
   "TakQuickstartWin2.unfoldableCard1.description1": "Download the WinTAK application from the <strong>Defense Forces' designated location</strong>.<br><strong>Download</strong> by clicking the icon below:",
   "TakQuickstartWin2.unfoldableCard1.note": "Important! Only download Windows applications from the instructed location.",
-  "TakQuickstartWin2.unfoldableCard2.title": "2. Open the Installer",
+  "TakQuickstartWin2.unfoldableCardDownload.title": "2. Download your Client Package",
+  "TakQuickstartWin2.unfoldableCardDownload.description1": "Download your client packege  by pressing the green <strong>Download your Client Package</strong> button. You can access the same button from the front page, too.<br><br>Save the .zip file.",
+  "TakQuickstartWin2.unfoldableCard2.title": "3. Open the Installer",
   "TakQuickstartWin2.unfoldableCard2.description1": "Find the downloaded zip and extract it. Locate the .msi installation file inside the zip's Products folder",
   "TakQuickstartWin2.unfoldableCard2.description2": "Double-click the .msi file to open the installer.",
-  "TakQuickstartWin2.unfoldableCard3.title": "3. Install Using the Installer",
+  "TakQuickstartWin2.unfoldableCard3.title": "4. Install Using the Installer",
   "TakQuickstartWin2.unfoldableCard3.description1": "Install WinTAK using the Setup Wizard.",
   "TakQuickstartWin2.unfoldableCard3.description2": "a. Press <strong>Next</strong>. Choose the application installation folder.",
   "TakQuickstartWin2.unfoldableCard3.description3": "b. Optionally change the installation folder via the <strong>Browse</strong> button. Press <strong>Next</strong>.",
