--- a/src/assets/locale/fi.json
+++ b/src/assets/locale/fi.json
@@ -333,7 +333,7 @@
   "takQuickstartAndroid1.unfoldableCard1.description1": "<h3>Lataa ATAK (1/2)</h3><strong>Lataa</strong> ATAK-CIV-sovellus Play Storesta ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
   "takQuickstartAndroid1.unfoldableCard1.description2": "<h3>b. Lataa ATAK Data Sync-plugin (2/2)</h3><strong>Lataa</strong> ATAK Data Sync-plugin, ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
   "takQuickstartAndroid1.unfoldableCard2.title": "2. Lataa viestiperusteet",
-  "takQuickstartAndroid1.unfoldableCard2.description1": "Lataa tämän palvelun <strong>etusivulta</strong> viestiperusteet painamalla vihreää <strong>Lataa viestiperustepaketti</strong>-nappia.<br><br>Tallenna .zip-tiedosto.",
+  "takQuickstartAndroid1.unfoldableCard2.description1": "Lataa omat viestiperusteesi.  Paina vihreää <strong>Lataa viestiperustepaketti</strong>-nappia alta (sama nappi löytyy myös tämän sovelluksen etusivulta).<br><br>Tallenna .zip-tiedosto.",
   "takQuickstartAndroid1.unfoldableCard2.note": "HUOMAA! Zip-tiedostoa ei tarvitse purkaa!",
   "takQuickstartAndroid1.unfoldableCard3.title": "3. Avaa sovellus ja anna sille sen kysymät oikeudet",
   "takQuickstartAndroid1.unfoldableCard3.description1": "Avaa sovellus. Anna kaikki oikeudet, mitä applikaatio pyytää.",
@@ -425,7 +425,7 @@
   "TakQuickstartIos1.unfoldableCard1.title": "1. Lataa sovellukset",
   "TakQuickstartIos1.unfoldableCard1.description1": "<h3>Lataa iTAK (1/2)</h3><strong>Lataa</strong> iTAK-sovellus App Storesta ja asenna se. Latauslinkki alla, <strong>paina</strong>:",
   "TakQuickstartIos1.unfoldableCard2.title": "2. Lataa viestiperusteet",
-  "TakQuickstartIos1.unfoldableCard2.description1": "Lataa tämän palvelun <strong>etusivulta</strong> viestiperusteet painamalla vihreää <strong>Lataa viestiperustepaketti</strong>-nappia.<br><br>Tallenna .zip-tiedosto.",
+  "TakQuickstartIos1.unfoldableCard2.description1": "Lataa omat viestiperusteesi.  Paina vihreää <strong>Lataa viestiperustepaketti</strong>-nappia alta (sama nappi löytyy myös tämän sovelluksen etusivulta).<br><br>Tallenna .zip-tiedosto.",
   "TakQuickstartIos1.unfoldableCard2.note": "HUOMAA! Zip-tiedostoa ei tarvitse purkaa!",
   "TakQuickstartIos1.alterForward": "Valmis! Palaa tästä.",
 
@@ -520,10 +520,12 @@
   "TakQuickstartWin2.unfoldableCard1.title": "1. Lataa WinTAK",
   "TakQuickstartWin2.unfoldableCard1.description1": "Lataa WinTAK-sovellus <strong>Puolustusvoimien osoittamasta paikasta</strong>.<br><strong>Lataa</strong> painamalla kuvaketta alta:",
   "TakQuickstartWin2.unfoldableCard1.note": "Tärkeää! Lataa Windows-sovelluksia vain ohjeistetusta paikasta.",
-  "TakQuickstartWin2.unfoldableCard2.title": "2. Avaa asennusohjelma",
+  "TakQuickstartWin2.unfoldableCard2.title": "3. Avaa asennusohjelma",
   "TakQuickstartWin2.unfoldableCard2.description1": "Etsi latamaasi zip ja pura se. Etsi .msi-päätteinen asennusohjelma zipin sisältä Products-kansiosta",
+  "TakQuickstartWin2.unfoldableCardDownload.title": "2. Lataa viestiperustepaketti",
+  "TakQuickstartWin2.unfoldableCardDownload.description1": "Lataa omat viestiperusteesi.  Paina vihreää <strong>Lataa viestiperustepaketti</strong>-nappia alta (sama nappi löytyy myös tämän sovelluksen etusivulta).<br><br>Tallenna .zip-tiedosto.",
   "TakQuickstartWin2.unfoldableCard2.description2": "Kaksoisnapauta .msi -tiedostoa. Aukeaa asennusohjelma.",
-  "TakQuickstartWin2.unfoldableCard3.title": "3. Asenna käyttäen asennusohjelmaa",
+  "TakQuickstartWin2.unfoldableCard3.title": "4. Asenna käyttäen asennusohjelmaa",
   "TakQuickstartWin2.unfoldableCard3.description1": "Asenna WinTAK käyttäen Setup Wizardia.",
   "TakQuickstartWin2.unfoldableCard3.description2": "a. Paina <strong>Next</strong>. Valitse sovelluksen asennuskansio.",
   "TakQuickstartWin2.unfoldableCard3.description3": "b. Vaihda halutessasi asennuskansiota <strong>Browse</strong>-napin kautta. Paina <strong>Next</strong>.",
